# sui-squad

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  dev-brief.md  docker-compose.yml  env.example  env.example.txt  todo.md
bot-cli/: Cargo.toml
bot-cli/src/: main.rs
bot-core/: Cargo.toml
bot-core/src/: activity.rs  lib.rs
bot-core/src/commands/: mod.rs
contracts/payments/: Move.toml
contracts/payments/sources/: account.move  admin.move  group.move
contracts/payments/tests/: account_tests.move  admin_tests.move  group_tests.move
contracts/sui_squard/: Move.toml
contracts/sui_squard/sources/: account.move  admin.move
contracts/sui_squard/tests/: account_tests.move  admin_tests.move
contracts/sui_squard/traces/: payments__account_tests__pay_with_not_existing_account.json.zst  payments__account_tests__pay_with_not_existing_object.json.zst  payments__account_tests__test_create_account.json.zst  payments__account_tests__test_create_account_with_not_existing_tg.json.zst  payments__account_tests__test_fund_account.json.zst  payments__account_tests__test_pay_account.json.zst  payments__account_tests__test_pay_account_two_times.json.zst  payments__account_tests__test_withdraw_funds.json.zst  payments__admin_tests__test_add_relations.json.zst  payments__admin_tests__test_create_admin.json.zst  payments__admin_tests__test_get_telegram_id_fail.json.zst  payments__group_tests__test_group_created_for_not_admin.json.zst  payments__group_tests__test_new_group.json.zst  sui_squard__account_tests__pay_with_not_existing_account.json.zst  sui_squard__account_tests__pay_with_not_existing_object.json.zst  sui_squard__account_tests__test_create_account.json.zst  sui_squard__account_tests__test_create_account_with_invalid_admin.json.zst  sui_squard__account_tests__test_create_account_with_not_existing_tg.json.zst  sui_squard__account_tests__test_fund_account.json.zst  sui_squard__account_tests__test_fund_account_with_invalid_telegram_id.json.zst  sui_squard__account_tests__test_pay_account.json.zst  sui_squard__account_tests__test_pay_account_two_times.json.zst  sui_squard__account_tests__test_pay_account_with_invalid_admin.json.zst  sui_squard__account_tests__test_withdraw_funds.json.zst  sui_squard__account_tests__test_withdraw_funds_with_invalid_admin.json.zst  sui_squard__admin_tests__test_add_relations.json.zst  sui_squard__admin_tests__test_create_admin.json.zst  sui_squard__admin_tests__test_get_telegram_id_fail.json.zst
keeper/: Cargo.toml
keeper/src/: db.rs  error.rs  main.rs  router.rs  state.rs
keeper/src/admin/: handler.rs
keeper/src/docs/: dto.rs
keeper/src/keep/: dto.rs  handler.rs
keeper/src/user/: dto.rs  handler.rs
keeper/src/webhook/: handler.rs
openai-responses-rs/: Cargo.toml
openai-responses-rs/src/: lib.rs
openai-responses-rs/src/types/: response.rs
sui-squad-bot/: Cargo.toml  Dockerfile
sui-squad-bot/src/: handlers.rs  main.rs
sui-squad-bot/src/bot_manage/: answer.rs  dto.rs  handler_tree.rs  handlers.rs  mod.rs
sui-squad-bot/src/credentials/: dto.rs  helpers.rs  mod.rs
sui-squad-bot/src/middleware/: auth.rs  user.rs
sui-squad-bot/src/onchain/: account.rs
sui-squad-bot/src/services/: dto.rs  services.rs
sui-squad-bot/src/tools/: schema.rs  tools.rs
sui-squad-core/: Cargo.toml
sui-squad-core/migrations/: 00000000000000_create_user_sui_map_table.sql  00000000000001_create_sui_groups_map_table.sql
sui-squad-core/src/: activity.rs  config.rs  error.rs  lib.rs  permissions.rs  sui_gateway.rs
sui-squad-core/src/ai/: langchain_client.rs  mod.rs  open_ai_client.rs  openai_client.rs  responses_client.rs
sui-squad-core/src/commands/: admin.rs  bot_commands.rs  mod.rs  user.rs
sui-squad-core/src/conversation/: cache.rs  mod.rs
sui-squad-core/src/db/: mod.rs
sui-squad-core/src/helpers/: dtos.rs  jwt.rs  mod.rs  utils.rs
sui-squad-core/src/package/: dto.rs
sui-squad-server/: Cargo.toml  Dockerfile
sui-squad-server/src/: router.rs  state.rs
sui-squad-server/src/admin/: handler.rs
sui-squad-server/src/docs/: dto.rs
sui-squad-server/src/fund/: handler.rs
sui-squad-server/src/info/: dto.rs  handler.rs
sui-squad-server/src/payment/: handler.rs
sui-squad-server/src/user/: handler.rs
sui-squad-server/src/withdraw/: handler.rs
sui-squard-bot/: Cargo.toml  Dockerfile
sui-squard-bot/src/: db.rs  main.rs
sui-squard-bot/src/bot_manage/: answer.rs  handler_tree.rs  handlers.rs
sui-squard-bot/src/middleware/: auth.rs  user.rs
sui-squard-bot/src/services/: services.rs
sui-squard-core/: Cargo.toml
sui-squard-core/src/ai/: mod.rs  responses_client.rs
sui-squard-core/src/commands/: bot_commands.rs  user.rs
sui-squard-server/: Cargo.toml  Dockerfile
sui-squard-server/src/: main.rs  router.rs
sui-squard-server/src/admin/: handler.rs
sui-squard-server/src/docs/: handler.rs
sui-squard-server/src/fund/: dto.rs  handler.rs
sui-squard-server/src/middlewares/: handler.rs
sui-squard-server/src/payment/: handler.rs
sui-squard-server/src/user/: handler.rs
sui-squard-server/src/webhook/: handler.rs
sui-squard-server/src/withdraw/: handler.rs
