[workspace]
resolver = "2"
package.version = "0.1.0"
members = [
    "sui-squad-bot",
    "sui-squad-core",
    "sui-squad-server"
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
utoipa = "5.3.1"
utoipa-redoc = {version = "6.0.0", features = ["axum"]}
tracing = "0.1"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
open-ai-rust-responses-by-sshift = { version = "0.1.8", features = ["stream"] }
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
squard_connect = { git = "https://github.com/Singularity-Shift/squard_connect", package = "squard_connect", tag="0.1.13"}
async-trait = "0.1"
thiserror = "1.0"
teloxide = { version = "0.15", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.5"
config = "0.13"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.14", features = [ "http2","json","rustls-tls"], default-features = false }
axum = {version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tower-http = {version="0.6.4", features = ["trace"]}
sui-squad-core = { path = "./sui-squad-core" }
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34.7"
