[package]
name = "bot-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "bot_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "macros"] }
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 