[package]
name = "keeper"
edition = "2024"
version.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true 
serde_json.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
sled = "0.34.7"
utoipa.workspace = true
utoipa-redoc.workspace = true
dotenvy.workspace = true
sui_sdk.workspace = true
sui-squad-core.workspace = true
squard_connect.workspace = true
