[package]
name = "sui-squad-bot"
version.workspace = true
edition = "2024"  # Changed from 2024 to 2021 for better compatibility

[dependencies]
sui-squad-core = { path = "../sui-squad-core" }
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
dotenvy.workspace = true
openai_responses.workspace = true
sui_sdk.workspace = true
squard_connect.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
