[package]
name = "sui-squad-bot"
version.workspace = true
edition = "2024"  # Changed from 2024 to 2021 for better compatibility

[dependencies]
sui-squad-core.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
dotenvy.workspace = true
open-ai-rust-responses-by-sshift.workspace = true
sui_sdk.workspace = true
sui_keys.workspace = true
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
tracing-subscriber.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
squard_connect.workspace = true
shared_crypto.workspace = true
rand = "0.8.5"
bcs = "0.1.6"
