[package]
name = "sui-squad-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "sui_squad_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate" ] }
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
# sui-sdk = "0.40.0" # We'll use a dummy for now
config = "0.13"
openai_responses = "0.1.6"

[dev-dependencies]
# ... existing code ... 