[package]
name = "sui-squad-core"
version.workspace = true
edition = "2024"

[lib]
name = "sui_squad_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
thiserror.workspace = true 
tracing.workspace = true 
serde.workspace = true 
serde_json.workspace = true 
teloxide.workspace = true 
tokio.workspace = true 
log.workspace = true 
pretty_env_logger.workspace = true 
config.workspace = true 
openai_responses.workspace = true 
reqwest = { version = "0.12.14", features = [ "http2","json","rustls-tls"], default-features = false }
utoipa.workspace = true
squard_connect.workspace = true

[dev-dependencies]
# ... existing code ... 