[package]
name = "sui-squad-core"
version.workspace = true
edition = "2024"

[lib]
name = "sui_squad_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
thiserror.workspace = true 
tracing.workspace = true 
serde.workspace = true 
serde_json.workspace = true 
teloxide.workspace = true 
tokio.workspace = true 
log.workspace = true 
pretty_env_logger.workspace = true 
config.workspace = true 
open-ai-rust-responses-by-sshift.workspace = true 
reqwest = { version = "0.12.14", features = [ "http2","json","rustls-tls"], default-features = false }
utoipa.workspace = true
squard_connect.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }

[dev-dependencies]
# ... existing code ... 