[package]
name = "sui-squad-server"
edition = "2024"
version.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true 
serde_json.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true
dotenvy.workspace = true
sui_sdk.workspace = true
sui-squad-core.workspace = true
squad_connect.workspace = true
shared_crypto.workspace = true
sui_keys = {git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
