[package]
name = "sui-squard-bot"
version.workspace = true
edition = "2024"  # Changed from 2024 to 2021 for better compatibility

[dependencies]
sui-squard-core.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
dotenvy.workspace = true
open-ai-rust-responses-by-sshift.workspace = true
sui_sdk.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
sled.workspace = true
tower-http.workspace = true
squard_connect.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
